--- a/DS_audio_5-166-224.html
+++ b/DS_audio_5-166-224.html
@@ -1,51 +1,64 @@
-166
+Marker_166
 Kapitel 5 Darf es ein bisschen Tisch sein
-167
-beide: Während wir also unterwegs sind
-T: und wie wir also immer unterwegs sind
-H: und wie wir gar nicht mehr aufhören, unterwegs zu sein
-168
-beide: Sie ahnen vielleicht schon: Das ist jetzt für immer.
-169
-T: Wenngleich die sogenannte Ewigkeit ja immer seltener als Stellgröße auftritt.
-170
-beide: Man könnte sagen: Über kurz oder lang gehen wir alle kaputt
+
+Marker_167
+Während wir also unterwegs sind
+<br>und wie wir also immer unterwegs sind
+<br>und wie wir gar nicht mehr aufhören, unterwegs zu sein
+
+Marker_168
+Sie ahnen vielleicht schon: Das ist jetzt für immer.
+
+Marker_169
+Wenngleich die sogenannte Ewigkeit ja immer seltener als Stellgröße auftritt.
+
+Marker_170
+Man könnte sagen: Über kurz oder lang gehen wir alle kaputt
 wir werden zum Beispiel unter der Last der Gefühle zerbrechen
-171
+
+Marker_171
 Man könnte sagen: Wir gehen nicht kaputt
 wir werden zum Beispiel unter der Last der Gefühle nicht zerbrechen.
-172
-H: Siehst du/seht ihr/sehen Sie?
-173
-Beide: Wir gehen eventuell auf so eine Art weiter, dass wir nicht vorankommen.
+
+Marker_172
+Siehst du/seht ihr/sehen Sie?
+
+Marker_173
+Wir gehen eventuell auf so eine Art weiter, dass wir nicht vorankommen.
 Oh, das ist /nicht/ die schlimmste Art des Weitergehens.
 Oh, das ist die schlimmste Art des Weitergehens.
 [ kleinere Pause ]
-174
+
+Marker_174
 Kennen Sie sich hier aus?
 Ist das hier Ihre Gegend?
-H: Ich bin noch nie hier gewesen.
+<br>Ich bin noch nie hier gewesen.
 Aber das Gegenteil ist auch der Fall.
 [ kleinere Pause ]
-175
-Beide: Sollten wir jetzt abbiegen?
-176
-T: Es duldet überhaupt keinen Aufschub mehr, dass du mir sagst, dass
-H: Es ist ganz dringend notwendig, dass du mir sagst, dass
-T: Es ist ganz dringend notwendig, dass du mir sagst, was
+
+Marker_175
+Sollten wir jetzt abbiegen?
+
+Marker_176
+Es duldet überhaupt keinen Aufschub mehr, dass du mir sagst, dass
+<br>Es ist ganz dringend notwendig, dass du mir sagst, dass
+<br>Es ist ganz dringend notwendig, dass du mir sagst, was
 [ kleinere PAUSE ]
-177
-beide: Übrigens, was man ja nicht verschweigen sollte.
+
+Marker_177
+Übrigens, was man ja nicht verschweigen sollte.
 Was wir ja immer sagen.
 Was wir wirklich nie ungesagt lassen
-178
+
+Marker_178
 es ist ein Satzsterben aller Orten
 Es ist ein Wortsterben aller Orten
 es ist so ein Absterben aller Orten
 in allen vier Jahreszeiten.
 [ kleinere Pause ]
-179
-H: Und es war einmal ein Tag
+
+Marker_179
+Und es war einmal ein Tag
 da sagten alle dasselbe
 und es ist schon wieder so ein Tag
 und immer ist so ein Tag
@@ -53,8 +66,9 @@ und alle sagen dasselbe
 Das hören Sie auch.
 Sie hören das Gesagte unterlegt von einem Bass, schwingend bis ins Mark
 und alle sagen dasselbe und alle hören dasselbe.
-180
-Beide: und das sind die besten Voraussetzungen für
+
+Marker_180
+und das sind die besten Voraussetzungen für
 äh
 Tinnitus
 äh
@@ -63,11 +77,13 @@ Burn-out
 Bore-out
 äh
 Katastrophen
-181
-H: Auch das
+
+Marker_181
+Auch das
 Ja, vor allem das.
-182
-Beide: Das haben wir doch alles schon einmal gehört.
+
+Marker_182
+Das haben wir doch alles schon einmal gehört.
 Das hören wir doch alles ständig.
 Das kann man alles doch auch anders sagen.
 Bitte, formulieren Sie das um.
@@ -77,10 +93,12 @@ Das kann man ja so nicht stehenlassen.
 Können Sie das bitte anders sagen?
 Wie bitte?
 Was soll denn diese Frage?
-183
-T: Es pressiert und ich möchte nicht abgelenkt werden.
-184
-Beide: Und es war einmal ein
+
+Marker_183
+Es pressiert und ich möchte nicht abgelenkt werden.
+
+Marker_184
+Und es war einmal ein
 Ja
 äh
 ja
@@ -90,10 +108,12 @@ oh
 oh
 äh
 Ja
-185
+
+Marker_185
 Ja, es war einmal
-186
-H: Ach ja, es war einmal ein Tisch.
+
+Marker_186
+Ach ja, es war einmal ein Tisch.
 Und es war einmal ein Mann, der wollte ein Tisch sein.
 Unglaublich, aber wahr.
 Es war einmal ein Mann, der hielt sich schließlich für einen Tisch und meinte, es wäre doch
@@ -119,7 +139,8 @@ ihn als einen solchen Tisch in Betracht ziehen könnte
 oder wenigstens theoretisch einen solchen Tisch in Betracht ziehen könnte.
 Und ich glaube, ich sagte
 ja
-187
+
+Marker_187
 und
 äh
 naja
@@ -127,25 +148,29 @@ nicht wahr
 ja
 auf jeden Fall
 also, warum denn nicht?
-188
-Beide: Sie sollten diesen Mann, wenn Sie ihm begegnen, nicht anstarren.
+
+Marker_188
+Sie sollten diesen Mann, wenn Sie ihm begegnen, nicht anstarren.
 Das würde ihn verunsichern.
 Was aber nichts über seine Qualitäten als Tisch aussagt.
 [ kleinere Pause ]
-189
-T: Es waren einmal tausende Unmöglichkeiten
+
+Marker_189
+Es waren einmal tausende Unmöglichkeiten
 und wenn man jetzt mal genau durchzählt
 dann sind von den Unmöglichkeiten nur noch
 soundsoviele da
 oder keine
-190
-beide: Wie bitte?
+
+Marker_190
+Wie bitte?
 [ kleinere Pause ]
 seid Ihr alle da?
 Sind jetzt alle da?
 Sind Sie noch da?
 [ kleinere Pause ]
-191
+
+Marker_191
 Was wir also wirklich wissen wollen: Sind auch Sie von der Sorte, dass Sie an einen
 äh
 üblen
@@ -159,33 +184,41 @@ tödlichen
 Text verloren gehen würden?
 Und wenn ja, wo wären Sie dann jetzt noch zu treffen?
 Und wann? Und wie?
-192
+
+Marker_192
 Wir sind übrigens vielleicht wirklich längst an schrecklichen Text verloren gegangen und
 entkommen ihm eventuell nicht mehr gänzlich.
 Das sieht man uns gar nicht an, oder?
 Ihnen sieht man auch nichts an.
-193
+
+Marker_193
 Aber das wird schon.
 Das wird schon.
 Das wird schon.
-194
+
+Marker_194
 Und wir lesen:
-195
-H:„Wer so etwas sagt, verkennt den Sinn der Wörter.“ [ 4 ]
-[ 4 ]  4 S. 103 Éric Vuillard: Die Tagesordnung
-196
-beide: Wir sind auf jeden Fall an einem Ort, wo niemand den Sinn der Wörter erkennt.
+
+Marker_195
+„Wer so etwas sagt, verkennt den Sinn der Wörter.“ (4)
+<br>(4) S. 103 Éric Vuillard: Die Tagesordnung
+
+Marker_196
+Wir sind auf jeden Fall an einem Ort, wo niemand den Sinn der Wörter erkennt.
 Wir sind auf jeden Fall an einem Ort, wo niemand den Sinn der Wörter verkennt.
 Hier wollen wir bleiben.
 Hier könnten wir unsere Vorräte auffüllen.
 Wir wollen keine Vorräte auffüllen, weil wir nicht annehmen wollen, es könnten schlechte
 Zeiten kommen.
-197
-H: Schlechte Zeiten
-198
-T: hallo, schlechte Zeiten.
-199
-Beide: Wir wollen nicht und unter keinen Umständen denken, dass wir auf etwas vorbereitet
+
+Marker_197
+Schlechte Zeiten
+
+Marker_198
+hallo, schlechte Zeiten.
+
+Marker_199
+Wir wollen nicht und unter keinen Umständen denken, dass wir auf etwas vorbereitet
 sein müssten.
 Wir wollen nicht und unter keinen Umständen denken, dass Sie auf etwas vorbereitet sein
 müssten.
@@ -195,63 +228,77 @@ als eine Notversorgung
 finde ein anderes Wort
 als eine
 [kleinere Pause]
-200
+
+Marker_200
 Wir wollen nicht mehr mit uns tragen als einen Zeitvertreib und ein paar Spanngurte oder
 Fäden.
 [kleinere Pause]
-201
+
+Marker_201
 Und wir lesen:
-202
-T: „Drinnen setzten sie sich an einen Tisch und […] dann schmiedeten sie offenbar den
-Plan, eine Anschlagserie […] zu verüben, um einen Bürgerkrieg auszulösen.“ [ 5 ]
-[ 5 ] S. 3 Süddeutsche vom Freitag, den 6. März 2020
-203
-beide: Und wir fragen uns nicht, warum wir uns das fragen, aber wir fragen uns:
+
+Marker_202
+„Drinnen setzten sie sich an einen Tisch und […] dann schmiedeten sie offenbar den
+Plan, eine Anschlagserie […] zu verüben, um einen Bürgerkrieg auszulösen.“ (5)
+<br>(5) S. 3 Süddeutsche vom Freitag, den 6. März 2020
+
+Marker_203
+Und wir fragen uns nicht, warum wir uns das fragen, aber wir fragen uns:
 Wie sah denn dieser Tisch aus.
 Wie sah wohl dieser Tisch aus?
-204
+
+Marker_204
 Was meinen Sie denn?
 Was meinen Sie denn, wenn Sie Tisch sagen?
 Was sehen Sie denn, wenn Sie Tisch sagen?
 Wo sind Sie denn, wenn Sie Tisch sagen?
 Und ob wir einander vertrauen können?
-205
+
+Marker_205
 Und wir sagen
 Wie sieht es denn hier aus?
 Hat sich schon wieder etwas verändert?
 Hat sich nichts verändert?
-206
+
+Marker_206
 Wir haben geschlussfolgert.
 Wir haben aus Versehen und am Puls der Folgerichtigkeit der Zeit einen Schluss nach dem
 anderen gezogen.
-207
+
+Marker_207
 Huch!
 Pardon!
-208
+
+Marker_208
 Dabei waren wir eigentlich noch nie der Meinung gewesen, man könne, müsse, sollte
 jemanden mit seinen eigenen Waffen schlagen.
-209
+
+Marker_209
 Wir halten ja auch nichts von Waffen, nicht wahr.
 Es heißt allerdings, wir tun nichts anderes mehr.
 Und es heißt: Man kann /nicht/ alles vorher wissen.
 Und es heißt: Man kann alles vorher wissen.
 Und wir sagen: Es ist alles bekannt.
 [kleinere Pause]
-210
+
+Marker_210
 Gut möglich, dass dieser Tisch dort eine Bühne ist.
 Gut möglich, dass dieser Tisch hier riesig ist.
 Lassen Sie uns diesen Tisch betrachten.
 Lassen Sie uns diesen Tisch benutzen.
 Guten Tag.
 Sie sind ja alle da.
-211
-H: Es war einmal ein Tisch, der sich vor einiger Zeit
+
+Marker_211
+Es war einmal ein Tisch, der sich vor einiger Zeit
 in ein Märchen zurückgezogen hat.
 Was ja nur gut ist.
 Oder wie ist es?
-212
-T: Es ist auf jeden Fall immer wenigstens ein bisschen anders.
-213
+
+Marker_212
+Es ist auf jeden Fall immer wenigstens ein bisschen anders.
+
+Marker_213
 Beide: Und wir halten um jeden Preis fest
 an 1.
 an 2.
@@ -263,17 +310,21 @@ an 7.
 an 8.
 an 9.
 an 10.
-214
-T: Es ist nur manchmal genau so.
+
+Marker_214
+Es ist nur manchmal genau so.
 Es ist nur äußerst selten genau so.
-215
-beide: Und es ist vollkommen / un / klar, was wir schon alles aufgegeben haben.
+
+Marker_215
+Und es ist vollkommen / un / klar, was wir schon alles aufgegeben haben.
 Und es ist vollkommen klar, was wir schon alles aufgegeben haben.
 [ kleinere Pause ]
-216
+
+Marker_216
 Keinesfalls
 Auf jeden Fall
-217
+
+Marker_217
 Wir geraten immerzu in die Gefechte von Theorie und Praxis.
 Und wir gerieten schon immer in die Gefechte von Theorie und Praxis.
 Aber ja.
@@ -282,27 +333,34 @@ Aber man kann nicht länger sitzen.
 Das geht so weiter.
 etc.
 PP.
-218
-T: Hören Sie?
+
+Marker_218
+Hören Sie?
 Hast Du
 Habt Ihr
 Haben Sie heute noch viel vor?
-219
-H: Das ist übrigens eine Zeit der metallenen Subtexte.
+
+Marker_219
+Das ist übrigens eine Zeit der metallenen Subtexte.
 Das ist eine Zeit der geladenen Subtexte.
-220
-Beide: Wir lesen Subtexte.
+
+Marker_220
+Wir lesen Subtexte.
 Wir lesen noch mehr Subtexte.
 Wir lesen und hören immer Subtexte.
 Wir machen das ja nicht zum Spaß.
 Das müssen Sie aber nicht glauben.
-221
-H: Es war einmal eine Zeit, da wurden wir an der besten Stelle des Gesprächs unterbrochen
+
+Marker_221
+Es war einmal eine Zeit, da wurden wir an der besten Stelle des Gesprächs unterbrochen
 und diese Unterbrechung war schmerzlich und unverzeihlich, aber dann begann ein anderes
 Märchen.
-222
-H: Es war einmal eine Zeit, in der ein anderes Märchen begann.
-223
-Beide: Aber ja.
-224
-T: Könnten Sie mir bitte sagen, wie spät es ist?
+
+Marker_222
+Es war einmal eine Zeit, in der ein anderes Märchen begann.
+
+Marker_223
+Aber ja.
+
+Marker_224
+Könnten Sie mir bitte sagen, wie spät es ist?
