--- a/DS_audio_1-001-024.html
+++ b/DS_audio_1-001-024.html
@@ -151,7 +151,7 @@ eine Bühne zu nennen.
 Sie sprechen nun auch Begrüßungsworte.
 Sie sagen: „Beziehung hat viele Formen, sie steht auf dem Spiel, ist unfertig und hat
 Folgen.“(1)
-(1)1 S. 38 Donna Haraway Manifest für Gefährten
+<br>(1)1 S. 38 Donna Haraway Manifest für Gefährten
 
 Marker_023
 Das haben Sie aber schön gesagt.
